--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hip5-hyperzone",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -14,7 +14,8 @@
     "bs32": "^0.1.6",
     "hip5": "^0.1.2",
     "hyperzone": "^0.1.2",
-    "nunjucks": "^3.2.3"
+    "nunjucks": "^3.2.3",
+    "random-access-memory": "^4.0.0"
   },
   "peerDependencies": {
     "bns": "^0.15.0"
